--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/global.scss">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 <header id="header">
     <div class="container">
-        <div class="header"></div>
+        <div class="header">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid assumenda at dolor dolores eaque
+            laudantium odit omnis quisquam sequi. Facere!
+        </div>
     </div>
 </header>
 
@@ -51,20 +55,6 @@
         <div class="footer"></div>
     </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
