--- a/index.html
+++ b/index.html
@@ -5,17 +5,33 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>BAYTIK LUX</title>
     <link rel="stylesheet" href="css/global.scss">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header id="header">
     <div class="container">
         <div class="header">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid assumenda at dolor dolores eaque
-            laudantium odit omnis quisquam sequi. Facere!
+            <img src="./img/logo.svg" alt="">
+
+            <a href="#">Главная</a>
+            <a href="#">О Компании</a>
+            <a href="#">ЖК – Байтик</a>
+            <a href="#">Выбрать дом</a>
+
+            <button><img src="./img/Language.svg"></button>
+
+            <a href="https://www.telegram.com/"><img src="img/Telegram.svg"></a>
+            <a href="https://www.instagram.com/"><img src="img/Instagram.svg"></a>
+            <a href="https://www.youtube.com/"><img src="img/Youtube.svg"></a>
+
+            <a href="tel:+996">0550 01 22 08</a>
+            <a href="tel:+996">0777 32 95 46</a>
+
+            <img src="img/Rectangle%204.svg" alt="">
         </div>
     </div>
 </header>
